Fix CCJK text wrapping in 'Upgrade' button on plan upsell card (#44498)
The CCJK text in Upgrade button on plan upsell card in domains/add
was split into multiple lines with single words being broken into 2-3 lines.
Using word-break: keep-all forces the words to remain on a single line
which works well in this case.

--- a/client/my-sites/domains/domain-management/components/domain/new-domains-redirection-notice-upsell.scss
+++ b/client/my-sites/domains/domain-management/components/domain/new-domains-redirection-notice-upsell.scss
@@ -8,4 +8,8 @@
 	.banner__description {
 		font-size: $font-body-small;
 	}
+
+	.button {
+		word-break: keep-all;
+	}
 }
